@@ -10,7 +10,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,7 +21,7 @@ public class UserService {
         return userRepository.findAll()
                 .stream()
                 .map(UserResponseDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserResponseDTO getUserById(Long id) {
